# RAG

./: .gitignore  Makefile  pyproject.toml
data/output/search_results/: dataset_docs_public.json
my_local_bm25/: corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
src/: __main__.py  eval.py  ingest.py  main.py
src/models/: models.py
student/: __main__.py  eval.py  ingest.py
