[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Introduction to function calling in LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8==7.3.0",
    "mypy==1.20.2",
    "pydantic==2.13.3",
    "bm25s==0.3.9",
    "fire==0.7.1",
    "langchain-text-splitters==1.1.2",
    "transformers==5.12.1",
    "tqdm==4.68.3",
    "dspy==3.2.1",
    "chromadb==1.5.2",
    "sentence-transformers==5.6.0"
]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true